move to reactjs

--- a/app/popup.html
+++ b/app/popup.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-    <h1>Hello</h1>
+  <body style="width:420px;">
+    <div id="container"></div>
     <script src="scripts/popup.js" charset="utf-8"></script>
   </body>
 </html>
